--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -1,33 +1,24 @@
 project:
-  name: update-me-to-project-repo-name
-  owner: quickstart@amazon.com
+  name: cfn-abi-deepwatch-mdr
+  owner: zachary.wallace@deepwatch.com
   package_lambda: false
+  shorten_stack_name: true
+  s3_regional_buckets: false
   regions:
-  - ap-northeast-1
-  - ap-northeast-2
-  - ap-southeast-1
-  - ap-southeast-2
-  - eu-central-1
-  - eu-west-1
-  - sa-east-1
   - us-east-1
-  - us-west-1
-  - us-west-2
 tests:
-  sample:
-    parameters:
-      Param1: 'Inputs to Stack'
-      # Examples: of other taskcat dynamic input parameters for more into see http://taskcat.io
-      #
-      #      AvailabilityZones: $[taskcat_genaz_3]
-      #      ByteValue: 1
-      #      PasswordA: $[taskcat_genpass_8A]
-      #      PasswordB: $[taskcat_genpass_32S]
-      #      RandomNumber: $[taskcat_random-numbers]
-      #      RandomString: $[taskcat_random-string]
-      #      StackName: TestStack
-      #      UUID: $[taskcat_genuuid]
-      #
+  logging-top-level:
     regions:
-    - us-east-1
-    template: templates/sample-workload.template.yaml
+      - us-east-1
+    template: templates/logging-top-level.yaml
+    parameters:
+      pSRAStagingS3KeyPrefix: $[taskcat_project_name]
+      pSRASourceS3BucketName: $[taskcat_autobucket]
+      pSRASourceS3BucketNamePrefix: $[taskcat_project_name]
+      pSRAS3BucketRegion: us-east-1
+      pAutoEnableS3Logs: 'true'
+      pAutoEnableK8sLogs: 'false'
+      pAutoEnableMalwareProtection: 'false'
+      pSRASolutionName: sra-guardduty-org
+      pSraTestingFlag: 'true'
+      pSRARoleName: 'zac-test'
