updated parameter name and value for role in .taskcat.yml

--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -21,4 +21,4 @@ tests:
       pAutoEnableMalwareProtection: 'false'
       pSRASolutionName: sra-guardduty-org
       pSraTestingFlag: 'true'
-      pSRARoleName: 'zac-test'
+      pDeepwatchRoleName: 'deepwatch-mdr-role'
