--- a/scripts/cleanup_config.json
+++ b/scripts/cleanup_config.json
@@ -9,6 +9,10 @@
         "Filter" : "cfn-abi-amazon-guardduty-"
     },
     {
+        "Type" : "S3_BUCKET",
+        "Filter" : "sra-gd-staging-"
+    },
+    {
         "Type" : "SSM_PARAMETER",
         "Filter" : "/sra/gd/"
     },
