--- a/templates/deepwatch-root-stack.yaml
+++ b/templates/deepwatch-root-stack.yaml
@@ -6,6 +6,11 @@ Metadata:
   'AWS::CloudFormation::Interface':
     ParameterGroups:
       - Label:
+          default: Source location details
+        Parameters:
+          - pSRASourceS3BucketName
+          - pSRAS3BucketRegion
+      - Label:
           default: General Properties
         Parameters:
           - pDeepwatchRoleName
@@ -21,6 +26,10 @@ Metadata:
           - pEnableLambdaDataEvents
           - pEnableS3DataEvents
     ParameterLabels:
+      pSRASourceS3BucketName:
+        default: SRA Source S3 Location
+      pSRAS3BucketRegion:
+        default: SRA Bucket Region
       pAutoEnableS3Logs:
         default: Auto Enable S3 Logs
       pAutoEnableK8sLogs:
@@ -34,6 +43,20 @@ Metadata:
       pEnableS3DataEvents:
         default: Enable Cloud Trail S3 Data Events for all buckets
 Parameters:
+  pSRASourceS3BucketName:
+    AllowedPattern: '^([\w.-]{1,900})$|^(\/[\w.-]{1,900})*[\w.-]{1,900}$'
+    ConstraintDescription: >-
+      Must be alphanumeric or special characters [., _, -]. In addition, the
+      slash character ( / ) used to delineate hierarchies in parameter names.
+    Default: aws-abi-pilot
+    Description: >-
+      Source bucket for all templates and artefacts that will get copied into
+      staging bucket
+    Type: String
+  pSRAS3BucketRegion:
+    AllowedPattern: '^[a-z][a-z]-[a-z]*-[0-9]*$'
+    Type: String
+    Default: us-east-1
   pAutoEnableS3Logs:
     AllowedValues:
       - 'true'
@@ -76,20 +99,22 @@ Resources:
     Type: 'AWS::CloudFormation::Stack'
     Properties:
       TemplateURL: !Sub >-
-        https://aws-abi-pilot.s3.us-east-1.${AWS::URLSuffix}/cfn-abi-deepwatch-mdr/submodules/cfn-abi-aws-cloudtrail/templates/sra-cloudtrail-enable-in-org-ssm.yaml
+        https://${pSRASourceS3BucketName}.s3.${pSRAS3BucketRegion}.${AWS::URLSuffix}/cfn-abi-deepwatch-mdr/submodules/cfn-abi-aws-cloudtrail/templates/sra-cloudtrail-enable-in-org-ssm.yaml
       Parameters:
         pEnableDataEventsOnly: false
         pEnableS3DataEvents: !Ref pEnableS3DataEvents
         pEnableLambdaDataEvents: !Ref pEnableLambdaDataEvents
+        pSRAS3BucketRegion: !Ref pSRAS3BucketRegion
   GuardDutyStack:
     Type: 'AWS::CloudFormation::Stack'
     Properties:
       TemplateURL: !Sub >-
-        https://aws-abi-pilot.s3.us-east-1.${AWS::URLSuffix}/cfn-abi-deepwatch-mdr/submodules/cfn-abi-amazon-guardduty/templates/sra-guardduty-enable-in-org-ssm.yaml
+        https://${pSRASourceS3BucketName}.s3.${pSRAS3BucketRegion}.${AWS::URLSuffix}/cfn-abi-deepwatch-mdr/submodules/cfn-abi-amazon-guardduty/templates/sra-guardduty-enable-in-org-ssm.yaml
       Parameters:
         pAutoEnableS3Logs: !Ref pAutoEnableS3Logs
         pAutoEnableK8sLogs: !Ref pAutoEnableK8sLogs
         pAutoEnableMalwareProtection: !Ref pAutoEnableMalwareProtection
+        pSRAS3BucketRegion: !Ref pSRAS3BucketRegion
   DeepwatchResourceConfigurationStack:
     Type: AWS::CloudFormation::StackSet
     Properties:
@@ -114,7 +139,7 @@ Resources:
           Regions:
             - !Ref AWS::Region
       TemplateURL: !Sub >-
-        https://aws-abi-pilot.s3.us-east-1.${AWS::URLSuffix}/cfn-abi-deepwatch-mdr/templates/deepwatch-logging-resource-configuration.yaml
+        https://${pSRASourceS3BucketName}.s3.${pSRAS3BucketRegion}.${AWS::URLSuffix}/cfn-abi-deepwatch-mdr/templates/deepwatch-logging-resource-configuration.yaml
       Parameters:
         - ParameterKey: pGuardDutyBucketName
           ParameterValue: !GetAtt [GuardDutyStack, Outputs.oPublishingDestinationBucketName]
