--- a/.tracker_info.yml
+++ b/.tracker_info.yml
@@ -1,17 +1,14 @@
-project_id: 'abip-1kirFQBF75MfEQ3RbMQHRb-5NlayJp9WpX1krs2Aq7Koa-ln87vz34'
-project_name: 'ABI CrowdStrike FCS'
-project_code: 'be6ec893-127c-4fa3-a4ab-1b9893302bfa'
+project_id: 'abip-1kirFQBF75MfEQ3RbMQHRb-5Qgs4qOsPgbXnTtlFjeTTo-ln8885t0'
+project_name: 'ABI Deepwatch MDR'
+project_code: 'bffb7631-0830-42a1-8d12-82482b5ffca6'
 project_type: 'ABI CloudFormation Project Type'
-partner_name: 'CrowdStrike'
+partner_name: 'DeepWatch'
 launch_date: '2023-10-04'
-repo_name: 'cfn-abi-crowdstrike-fcs'
+repo_name: 'cfn-abi-deepwatch-mdr'
 templates_info:
-  - template_id: 'abi-1kirFQBF75MfEQ3RbMQHRb-5NlayJp9WpX1krs2Aq7Koa-ln87vzuy'
-    file_name: 'templates/crowdstrike_init_stack.yaml'
+  - template_id: 'abi-1kirFQBF75MfEQ3RbMQHRb-5Qgs4qOsPgbXnTtlFjeTTo-ln8886kt'
+    file_name: 'templates/deepwatch-root-stack.yaml'
     count_flag: 'true'
-  - template_id: 'abi-1kirFQBF75MfEQ3RbMQHRb-5NlayJp9WpX1krs2Aq7Koa-ln87w0mw'
-    file_name: 'templates/aws_cspm_cloudformation_eb_v2.json'
-    count_flag: 'false'
-  - template_id: 'abi-1kirFQBF75MfEQ3RbMQHRb-5NlayJp9WpX1krs2Aq7Koa-ln87w1et'
-    file_name: 'templates/aws_cspm_cloudformation_v2.json'
+  - template_id: 'abi-1kirFQBF75MfEQ3RbMQHRb-5Qgs4qOsPgbXnTtlFjeTTo-ln8887cq'
+    file_name: 'templates/deepwatch-logging-resource-configuration.yaml'
     count_flag: 'false'
