--- a/templates/deepwatch-root-stack.yaml
+++ b/templates/deepwatch-root-stack.yaml
@@ -48,7 +48,7 @@ Parameters:
     ConstraintDescription: >-
       Must be alphanumeric or special characters [., _, -]. In addition, the
       slash character ( / ) used to delineate hierarchies in parameter names.
-    Default: aws-abi-pilot
+    Default: aws-abi
     Description: >-
       Source bucket for all templates and artefacts that will get copied into
       staging bucket
