--- a/templates/deepwatch-root-stack.yaml
+++ b/templates/deepwatch-root-stack.yaml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: >-
   Configures services and resources for CloudTrail and GuardDuty logging in
-  Deepwatch cloud MDR
+  Deepwatch cloud MDR (abi-1kirFQBF75MfEQ3RbMQHRb-5Qgs4qOsPgbXnTtlFjeTTo-ln8886kt)
 Metadata:
   'AWS::CloudFormation::Interface':
     ParameterGroups:
@@ -48,7 +48,7 @@ Parameters:
     ConstraintDescription: >-
       Must be alphanumeric or special characters [., _, -]. In addition, the
       slash character ( / ) used to delineate hierarchies in parameter names.
-    Default: aws-abi-pilot
+    Default: aws-abi
     Description: >-
       Source bucket for all templates and artefacts that will get copied into
       staging bucket
