--- a/scripts/cleanup_config.json
+++ b/scripts/cleanup_config.json
@@ -1,5 +1,36 @@
 [
     {
+        "Type" : "SSM_PARAMETER",
+        "Filter" : "/sra/gd/"
+    },
+    {
+        "Type" : "SSM_PARAMETER",
+        "Filter" : "/sra/gd/",
+        "Account" : "log_account"
+    },
+    {
+        "Type" : "SSM_PARAMETER",
+        "Filter" : "/sra/control-tower/",
+        "Account" : "log_account"
+    },
+    {
+        "Type" : "SSM_PARAMETER",
+        "Filter" : "/sra/regions/",
+        "Account" : "log_account"
+    },
+    {
+        "Type" : "SSM_PARAMETER",
+        "Filter" : "/sra/"
+    },
+    {
+        "Type" : "SSM_PARAMETER",
+        "Filter" : "/sra/ctrail/"
+    },
+    {
+        "Type" : "SSM_PARAMETER",
+        "Filter" : "/sra/gd/"
+    },
+    {
         "Type" : "S3_BUCKET",
         "Filter" : "sra-guardduty-org-delivery-",
         "Account" : "log_account"
@@ -13,28 +44,8 @@
         "Filter" : "sra-gd-staging-" 
     },
     {
-        "Type" : "SSM_PARAMETER",
-        "Filter" : "/sra/gd/"
-    },
-    {
-        "Type": "STACK",
-        "Filter" : "tcat-cfn-abi-deepwatch-mdr"
-    },
-    {
-        "Type": "STACK",
-        "Filter" : "tCaT-enable-cloudtrail-ssm-"
-    },
-    {
-        "Type" : "STACK",
-        "Filter": "tCaT-stage-ctrail-content-local-"
-    },
-    {
-        "Type" : "STACK",
-        "Filter": "org-level-trail-dataevent-only"
-    },
-    {
-        "Type" : "STACK",
-        "Filter": "org-level-trail-with-mgmt-events"
+        "Type" : "S3_BUCKET",
+        "Filter": "sra-helper-"
     },
     {
         "Type" : "S3_BUCKET",
@@ -50,11 +61,79 @@
         "Filter": "cfn-abi-aws-cloudtrail-"
     },
     {
-        "Type" : "SSM_PARAMETER",
-        "Filter" : "/sra/ctrail/"
+        "Type" : "S3_BUCKET",
+        "Filter" : "sra-guardduty-org-delivery-",
+        "Account" : "log_account"
+    },
+    {
+        "Type" : "S3_BUCKET",
+        "Filter" : "cfn-abi-amazon-guardduty-"
+    },
+    {
+        "Type" : "S3_BUCKET",
+        "Filter" : "tcat-"
+    },
+    {
+        "Type" : "S3_BUCKET",
+        "Filter" : "sra-staging-"
+    },
+    {
+        "Type" : "S3_BUCKET",
+        "Filter" : "sra-gd-staging-"
+    },
+    {
+        "Type" : "LOG_GROUP",
+        "Filter": "/aws/lambda/sra-codebuild-project-lambda"
+    },
+    {
+        "Type" : "LOG_GROUP",
+        "Filter": "/aws/lambda/sra-guardduty-codebuild-project-lambda"
     },
     {
         "Type" : "LOG_GROUP",
         "Filter" : "sra/sra-org-trail"
+    },
+    {
+        "Type" : "LOG_GROUP",
+        "Filter" : "/sra/gd/",
+        "Account" : "log_account"
+    },
+    {
+        "Type" : "LOG_GROUP",
+        "Filter" : "/aws/lambda/sra-gd-s3",
+        "Account" : "log_account"
+    },
+    {
+        "Type" : "CODE_BUILD",
+        "Filter": "sra-codebuild-project"
+    },
+    {
+        "Type" : "IAM_ROLE",
+        "Filter" : "sra-execution",
+        "Account" : "log_account"
+    },
+    {
+        "Type" : "IAM_ROLE",
+        "Filter" : "sra-execution"
+    },
+    {
+        "Type" : "IAM_ROLE",
+        "Filter" : "sra-execution",
+        "Account" : "audit"
+    },
+    {
+        "Type" : "STACK_SET",
+        "Filter" : "sra-stackset-execution-role"
+    },
+    {
+        "Type" : "STACK",
+        "Filter" : "sra-common-prerequisites-staging-s3-bucket"
+    },
+    {
+        "Type" : "STACK",
+        "Filter" : "tCaT-logging-top-level-"
+    },
+    {
+        "Type" : "GUARDDUTY_DET"
     }
 ]
