Updates to migrate submodules from ABI to SRA. (#34)
* Added SRA submodule at tag v3.0.4 and removed ABI submodules

* Changes required for ABI to SRA module migration

* updated documentation

* updated functional tests

* minor fix on functional test

* updated cleanup instructions

--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -15,8 +15,17 @@ tests:
       pSRASourceS3BucketName: $[taskcat_autobucket]
       pSRAS3BucketRegion: us-east-1
       pAutoEnableS3Logs: 'true'
-      pAutoEnableK8sLogs: 'false'
+      pAutoEnableKubernetesAuditLogs: 'false'
       pAutoEnableMalwareProtection: 'false'
       pDeepwatchRoleName: 'deepwatch-mdr-role'
       pEnableLambdaDataEvents: 'false'
       pEnableS3DataEvents: 'true'
+      pDisableGuardDuty: 'Yes'
+
+  logging-top-level-defaults:
+    regions:
+      - us-east-1
+    template: templates/deepwatch-root-stack.yaml
+    parameters:
+      pSRASourceS3BucketName: $[taskcat_autobucket]
+      pDisableGuardDuty: 'Yes'
